package business.gameObjects.characters.enemies;

import business.gameObjects.characters.Entity;

public class Enemy extends Entity {
}