package business.gameObjects.characters.players;

import business.gameObjects.characters.Entity;

public class Player extends Entity {

}