package business.gameObjects.fruits;

public class Fruit {
}