package business.gameObjects.fruits;

import business.interfaces.Movable;

public class FruitWithMovement extends Fruit implements Movable {

	@Override
	public void move() {

	}
}