package business.interfaces;

public interface IceBreaker {
}