package business.interfaces;

public interface Movable {
	abstract public void move();
}