package business.levels;

public class Level {
}